syntax="proto3";
option go_package="./proto/user";
package user;

service User{
  rpc Registry(RegistryRequest) returns (Response);
  rpc Login(LoginRequest) returns (Response);
  rpc SendEmail(EmailRequest) returns(Response);
}

message EmailRequest{
  string email=1;
}

message LoginRequest{
  string email=1;
  string password=2;
}

message RegistryRequest{
  string email=1;
  string password=2;
  string code=3;
}

message Response{
  int32 code=1;
  string msg=2;
}